--- a/WPF.QuickStart.UI/Resources/Shared.xaml
+++ b/WPF.QuickStart.UI/Resources/Shared.xaml
@@ -15,7 +15,9 @@
     <converter:EnumToBoolConverter x:Key="enumToBoolConverter" />
     
     <!-- Custom Color Palette -->
-    <Color x:Key="AquaBlueColor">#FFA3C3EC</Color>
+    
+    
+    <!--<Color x:Key="AquaBlueColor">#FFA3C3EC</Color>
     <Brush x:Key="AquaBlueBrush">#FFA3C3EC</Brush>
 
     <LinearGradientBrush x:Key="AquaBlueBrushGradient" EndPoint="0.5,1" StartPoint="0.5,0">
@@ -32,8 +34,9 @@
         <GradientStop Color="#FFFFAB3F" Offset="0.5" />
     </LinearGradientBrush>
 
-    <Brush x:Key="OrangeBrush">#FFFEE17A</Brush>
+    <Brush x:Key="OrangeBrush">#FFFEE17A</Brush>-->
 
+    
     <!-- End Custom Color Palette -->
 
     <Style x:Key="windowBaseStyle" TargetType="Window">
@@ -47,8 +50,7 @@
         <Setter Property="MinHeight" Value="600" />
         <Setter Property="ResizeMode" Value="CanResizeWithGrip" />
         <Setter Property="WindowState" Value="Maximized" />
-        <!--<Setter Property="Background" Value="FloralWhite" />
-        <Setter Property="Foreground" Value="#CC119EDA" />-->
+        <!--<Setter Property="Foreground" Value="#CC119EDA" />-->
         <Setter Property="Title" Value="MainWindow" />
     </Style>
 
@@ -62,6 +64,7 @@
         <Setter Property="FontWeight" Value="Bold" />
         <Setter Property="FontFamily" Value="Arial" />
         <Setter Property="Margin" Value="10" />
+        <Setter Property="Foreground" Value="{DynamicResource AccentColorBrush}" />
     </Style>
 
     <Style x:Key="baseStyle" TargetType="{x:Type Control}">
@@ -76,23 +79,7 @@
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="Width" Value="Auto" />
         <Setter Property="Margin" Value="10,0" />
-    </Style>
-
-    <Style x:Key="baseStyleBtn" BasedOn="{StaticResource baseStyle}" TargetType="{x:Type Button}">
-        <Setter Property="Width" Value="Auto" />
-        <Setter Property="HorizontalAlignment" Value="Left" />
-        <Setter Property="Padding" Value="5,1,5,1" />
-        <Setter Property="Margin" Value="10,0" />
-    </Style>
-
-    <Style BasedOn="{StaticResource baseStyleBtn}" TargetType="{x:Type Button}">
-        <Setter Property="MinWidth" Value="200" />
-        <Setter Property="MinHeight" Value="26" />
-    </Style>    
-    
-    <Style BasedOn="{StaticResource baseStyle}" TargetType="{x:Type ComboBox}">
-        <Setter Property="Width" Value="250" />
-    </Style>
+    </Style> 
     
     <Style BasedOn="{StaticResource baseStyleTextBlock}" TargetType="{x:Type TextBlock}">        
     </Style>
@@ -105,22 +92,23 @@
 
     <Style x:Key="HeaderStyle" BasedOn="{StaticResource baseStyleTitleTextBlock}" TargetType="{x:Type TextBlock}">
         <Setter Property="FontSize" Value="30" />
-        <!--<Setter Property="Foreground" Value="{DynamicResource AccentBrush}" /> NOT WORKING WHEN UNCOMMENT AND GO TO TWITTER SCREEN -->
+        <Setter Property="Foreground" Value="{DynamicResource AccentColorBrush}" />
     </Style>
 
-    <Style x:Key="noteHeaderStyle" BasedOn="{StaticResource baseStyleTitleTextBlock}" TargetType="{x:Type TextBlock}">
+    <Style x:Key="noteHeaderStyle" TargetType="{x:Type TextBlock}">
         <Setter Property="FontSize" Value="10" />
-        <Setter Property="Foreground" Value="Black" />
         <Setter Property="FontStyle" Value="Italic" />
+        <Setter Property="Foreground" Value="{DynamicResource AccentColorBrush2}" />
     </Style>    
 
     <Style x:Key="subTitleStyle" BasedOn="{StaticResource baseStyleTitleTextBlock}" TargetType="{x:Type TextBlock}">
         <Setter Property="FontSize" Value="15" />
+        <Setter Property="Foreground" Value="{DynamicResource AccentColorBrush}" />
     </Style>
 
     <Style x:Key="categoryBtn" BasedOn="{StaticResource AccentedSquareButtonStyle}" TargetType="{x:Type Button}">
         <Setter Property="Width" Value="110" />
-        <Setter Property="Height" Value="110" />
+        <Setter Property="Height" Value="50" />
         <Setter Property="FontWeight" Value="Bold" />
         <Setter Property="FontFamily" Value="Arial" />
         <Setter Property="Padding" Value="5,1,5,1" />
