--- a/WPF.QuickStart.UI/Views/Yahoo/HistoricalQuoteView.xaml
+++ b/WPF.QuickStart.UI/Views/Yahoo/HistoricalQuoteView.xaml
@@ -13,74 +13,82 @@
 
         <TextBlock Text="{Binding DisplayName}" Style="{StaticResource HeaderStyle}" DockPanel.Dock="Top" />
 
-        <StackPanel Orientation="Vertical" DockPanel.Dock="Top">
-            <StackPanel Orientation="Horizontal">
-                <TextBlock x:Name="SecurityCodeTxt" Text="Security Code" />
-                <TextBox x:Name="SecurityCode"  Width="134" ToolTip="Input code. Exple : YHOO, MSCI .." 
-                         Controls:TextboxHelper.Watermark="YHOO" Controls:TextboxHelper.ClearTextButton="True" />
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin="0,10">
-                <TextBlock x:Name="StartDateTxt" Text="Start Date" Width="74" />
-                <xctk:DateTimePicker x:Name="StartDate" Format="ShortDate" Value="{Binding StartDate}" Width="150" Margin="0 5 10 5" Height="25" />
-                <TextBlock x:Name="EndDateTxt" Text="End Date" />
-                <xctk:DateTimePicker x:Name="EndDate" Format="ShortDate" Value="{Binding EndDate}" Width="150" Margin="0 5 10 5" Height="25" Tag="" />
-            </StackPanel>
-            <Button x:Name="LoadHistoricalData" Content="Load historical quotes" />
-        </StackPanel>
+        <ScrollViewer DockPanel.Dock="Top" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch">
 
-        <Grid Margin="0,10" DockPanel.Dock="Top">
+            <DockPanel>
 
-            <xcdg:DataGridControl 
-                x:Name="_dataGrid" 
-                MaxHeight="300"
-                MinHeight="200"
-                MinWidth="1000"
-                Width="Auto"
-                ItemsSource="{Binding MyCollectionItems}"/>
-        </Grid>
-
-
-        <DockPanel>
-            <chart:PieChart 
-                DockPanel.Dock="Left"
-                Style="{StaticResource MinimalChartStyle}"
-                ChartTitle="Minimal Pie Chart"
-                ChartSubTitle="Chart with fixed width and height"
-                SelectedItem="{Binding Path=SelectedItem, Mode=TwoWay}" >
-                <chart:PieChart.Series>
-                    <chart:ChartSeries
-                        SeriesTitle="Errors"
-                        DisplayMember="Category"
-                        ValueMember="Number"
-                        ItemsSource="{Binding Path=Errors}" />
-                </chart:PieChart.Series>
-            </chart:PieChart>
-
-            <DockPanel DockPanel.Dock="Right" Background="AliceBlue">
-                <GroupBox Name="PriceTypeOptionsPanelGrp" Header="Axis Y" Margin="20,5" DockPanel.Dock="Bottom">
+                <StackPanel Orientation="Vertical" DockPanel.Dock="Top">
                     <StackPanel Orientation="Horizontal">
-                        <RadioButton Content="Open" IsChecked="{Binding PriceTypeOptions, Converter={
-                            StaticResource enumToBoolConverter}, ConverterParameter=Open}" />
-                        <RadioButton Content="Close" IsChecked="{Binding PriceTypeOptions, Converter={
-                            StaticResource enumToBoolConverter}, ConverterParameter=Close}" Margin="10,0" />
-                        <RadioButton Content="High" IsChecked="{Binding PriceTypeOptions, Converter={
-                            StaticResource enumToBoolConverter}, ConverterParameter=High}" Margin="10,0" />
-                        <RadioButton Content="Low" IsChecked="{Binding PriceTypeOptions, Converter={
-                            StaticResource enumToBoolConverter}, ConverterParameter=Low}" Margin="10,0" />
+                        <TextBlock x:Name="SecurityCodeTxt" Text="Security Code" />
+                        <TextBox x:Name="SecurityCode"  Width="134" ToolTip="Input code. Exple : YHOO, MSCI .." 
+                             Controls:TextboxHelper.Watermark="YHOO" Controls:TextboxHelper.ClearTextButton="True" />
                     </StackPanel>
-                </GroupBox>
+                    <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                        <TextBlock x:Name="StartDateTxt" Text="Start Date" Width="74" />
+                        <xctk:DateTimePicker x:Name="StartDate" Format="ShortDate" Value="{Binding StartDate}" Width="150" Height="25" />
+                        <TextBlock x:Name="EndDateTxt" Text="End Date" />
+                        <xctk:DateTimePicker x:Name="EndDate" Format="ShortDate" Value="{Binding EndDate}" Width="150" Height="30" Tag="" />
+                        <Button x:Name="LoadHistoricalData" Content="Load historical quotes" Margin="10,0"/>
+                    </StackPanel>
+                </StackPanel>
 
-                <Grid Margin="10">
-                    <oxy:PlotView Title="Chart" Width="600" Height="250">
-                        <oxy:PlotView.Series>
-                            <oxy:LineSeries ItemsSource="{Binding ChartQuotePointsList}"/>
-                        </oxy:PlotView.Series>
-                    </oxy:PlotView>
+                <Grid Margin="0,5" DockPanel.Dock="Top">
+
+                    <DataGrid ItemsSource="{Binding MyCollectionItems}"
+                            Margin="10"
+                            MaxHeight="300"
+                            MinHeight="200"
+                            MinWidth="1000"
+                            Width="Auto"                      
+                            Visibility="{Binding MyCollectionItems.Count, Converter={StaticResource intToVisibilityConverter}}"
+                      AutoGenerateColumns="True" />
+                    <xctk:BusyIndicator IsBusy="{Binding IsBusy}" />
+
                 </Grid>
+
+                <DockPanel>
+                    <chart:PieChart 
+                        DockPanel.Dock="Left"
+                        Style="{StaticResource MinimalChartStyle}"
+                        ChartTitle="Minimal Pie Chart"
+                        ChartSubTitle="Chart with fixed width and height"
+                        SelectedItem="{Binding Path=SelectedItem, Mode=TwoWay}" >
+                        <chart:PieChart.Series>
+                            <chart:ChartSeries
+                                SeriesTitle="Errors"
+                                DisplayMember="Category"
+                                ValueMember="Number"
+                                ItemsSource="{Binding Path=Errors}" />
+                        </chart:PieChart.Series>
+                    </chart:PieChart>
+
+                    <DockPanel DockPanel.Dock="Right">
+                        <GroupBox Name="PriceTypeOptionsPanelGrp" Header="Axis Y" Margin="20,5" DockPanel.Dock="Bottom">
+                            <StackPanel Orientation="Horizontal">
+                                <RadioButton Content="Open" IsChecked="{Binding PriceTypeOptions, Converter={
+                            StaticResource enumToBoolConverter}, ConverterParameter=Open}" />
+                                <RadioButton Content="Close" IsChecked="{Binding PriceTypeOptions, Converter={
+                            StaticResource enumToBoolConverter}, ConverterParameter=Close}" Margin="10,0" />
+                                <RadioButton Content="High" IsChecked="{Binding PriceTypeOptions, Converter={
+                            StaticResource enumToBoolConverter}, ConverterParameter=High}" Margin="10,0" />
+                                <RadioButton Content="Low" IsChecked="{Binding PriceTypeOptions, Converter={
+                            StaticResource enumToBoolConverter}, ConverterParameter=Low}" Margin="10,0" />
+                            </StackPanel>
+                        </GroupBox>
+                        <Grid Margin="10">
+                            <oxy:PlotView Title="Chart" Width="600" Height="250">
+                                <oxy:PlotView.Series>
+                                    <oxy:LineSeries ItemsSource="{Binding ChartQuotePointsList}"/>
+                                </oxy:PlotView.Series>
+                            </oxy:PlotView>
+                        </Grid>
+                    </DockPanel>
+
+                </DockPanel>
 
             </DockPanel>
 
-        </DockPanel>
+        </ScrollViewer>
 
     </DockPanel>
 
