--- a/WPF.QuickStart.UI/Views/ClientServer/ChildView.xaml
+++ b/WPF.QuickStart.UI/Views/ClientServer/ChildView.xaml
@@ -13,86 +13,92 @@
 
         <!--<ctrl:MyCustomControl Margin="40,10" BorderBrush="Red" BorderThickness="2" ItemsSource="{Binding MyCollectionItems}" EnabledUi="{Binding Enabled}" IsExportable="Visible" />-->
 
-        <DockPanel DockPanel.Dock="Top"  LastChildFill="False">
-            <Button DockPanel.Dock="Left" 
-                    x:Name="ConnectBtn" 
-                    Content="Connect" 
-                    ToolTip="Connect to the server" 
-                    IsEnabled="{Binding Connected, Converter={StaticResource inverseBoolConverter}}" 
-                    Style="{DynamicResource AccentedSquareButtonStyle}" 
-                    Width="172" Height="52" 
-                    Margin="20, 0, 10, 5"
-                    />
-            <Rectangle DockPanel.Dock="Left" Width="30" Height="30" 
-                       Visibility="{Binding Connected, Converter={StaticResource boolToVisibilityConverter}}">
-                <Rectangle.Resources>
-                </Rectangle.Resources>
-                <Rectangle.Fill>
-                    <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_connect}" />
-                </Rectangle.Fill>
-            </Rectangle>
-        </DockPanel>
+        <ScrollViewer DockPanel.Dock="Top">
 
-        <Grid DockPanel.Dock="Top" Margin="10">
-            <GroupBox Name="TwitterPanelGrp" Header="Twitter News Feed">
-                <StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <Button DockPanel.Dock="Left" 
-                            x:Name="GetNewsFeed" 
-                            Content="Show news" 
-                            IsEnabled="{Binding Connected}" 
-                            HorizontalAlignment="Left" 
-                            Width="172" Height="41"
-                            Margin="10 "/>
-                        <TextBox x:Name="Keyword" 
-                                 IsEnabled="{Binding ConnectedTwitter, Converter={StaticResource inverseBoolConverter}}"  
-                                 Width="200" 
-                                 Height="43"                                 
-                                 Controls:TextboxHelper.Watermark="Type a keyword ..." 
-                                 Controls:TextboxHelper.ClearTextButton="True" 
-                                 VerticalContentAlignment="Center" />
-                        <Image gif:ImageBehavior.AnimatedSource="/Images/wait.gif" 
-                           Height="24" Width="24" Margin="5,5" 
-                           Visibility="{Binding ConnectedTwitter, Converter={StaticResource boolToVisibilityConverter}}" />
-                    </StackPanel>
-                    <ListView  ItemsSource="{Binding ServerResponseTweets}" Width="Auto" Height="100">
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <TextBlock TextWrapping="WrapWithOverflow" Text="{Binding Path=Text}" Background="{Binding RelativeSource={RelativeSource AncestorType=ListViewItem}, Converter={StaticResource backgroundConverter}}" Width="Auto" />
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
-                </StackPanel>
-            </GroupBox>
-        </Grid>
+            <DockPanel>
 
-        <Grid DockPanel.Dock="Top" Margin="10" Height="Auto" >
-            <GroupBox Name="GetDataSourceItemsPanelGrp" Header="Query the Server">
-                <StackPanel>
+                <DockPanel DockPanel.Dock="Top"  LastChildFill="False">
                     <Button DockPanel.Dock="Left" 
-                            x:Name="GetDataSourceList" 
-                            Content="Query Server"
-                            IsEnabled="{Binding Connected}" 
-                            HorizontalAlignment="Left" 
-                            Width="172" Height="41"
-                            Margin="10 "/>
-                    <UniformGrid Columns="2">
+                        x:Name="ConnectBtn" 
+                        Content="Connect" 
+                        ToolTip="Connect to the server" 
+                        IsEnabled="{Binding Connected, Converter={StaticResource inverseBoolConverter}}" 
+                        Style="{DynamicResource AccentedSquareButtonStyle}" 
+                        Width="172" Height="52" 
+                        Margin="20, 0, 10, 5"
+                        />
+                    <Rectangle DockPanel.Dock="Left" Width="30" Height="30" 
+                           Visibility="{Binding Connected, Converter={StaticResource boolToVisibilityConverter}}">
+                        <Rectangle.Resources>
+                        </Rectangle.Resources>
+                        <Rectangle.Fill>
+                            <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_connect}" />
+                        </Rectangle.Fill>
+                    </Rectangle>
+                </DockPanel>
+
+                <Grid DockPanel.Dock="Top" Margin="10">
+                    <Expander Name="TwitterPanelGrp" Header="Twitter News Feed" IsExpanded="True">
                         <StackPanel>
-                            <TextBlock Style="{DynamicResource subTitleStyle}" Text="SERVER RESPONSES HISTORY"/>
-                            <Border BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}" Padding="5" Margin="5">
-                                <ListView ItemsSource="{Binding ServerResponseItems}" Height="200" Background="{DynamicResource AccentColorBrush4}" />
-                            </Border>
+                            <StackPanel Orientation="Horizontal">
+                                <Button DockPanel.Dock="Left" 
+                                x:Name="GetNewsFeed" 
+                                Content="Show news" 
+                                IsEnabled="{Binding Connected}" 
+                                HorizontalAlignment="Left" 
+                                Width="172" Height="41"
+                                Margin="10 "/>
+                                <TextBox x:Name="Keyword" 
+                                     IsEnabled="{Binding ConnectedTwitter, Converter={StaticResource inverseBoolConverter}}"  
+                                     Width="200" 
+                                     Height="43"                                 
+                                     Controls:TextboxHelper.Watermark="Type a keyword ..." 
+                                     Controls:TextboxHelper.ClearTextButton="True" 
+                                     VerticalContentAlignment="Center" />
+                                <Image gif:ImageBehavior.AnimatedSource="/Images/wait.gif" 
+                               Height="24" Width="24" Margin="5,5" 
+                               Visibility="{Binding ConnectedTwitter, Converter={StaticResource boolToVisibilityConverter}}" />
+                            </StackPanel>
+                            <ListView  ItemsSource="{Binding ServerResponseTweets}" Width="Auto" Height="100">
+                                <ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBlock TextWrapping="WrapWithOverflow" Text="{Binding Path=Text}" Background="{Binding RelativeSource={RelativeSource AncestorType=ListViewItem}, Converter={StaticResource backgroundConverter}}" Width="Auto" />
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                            </ListView>
                         </StackPanel>
+                    </Expander>
+                </Grid>
+
+                <Grid DockPanel.Dock="Top" Margin="10" Height="Auto" >
+                    <Expander Name="GetDataSourceItemsExpander" Header="Query the Server" IsExpanded="False">
                         <StackPanel>
-                            <TextBlock Style="{DynamicResource subTitleStyle}" Text="DETAILED ITEMS"/>
-                            <Border BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}" Padding="5" Margin="5">
-                                <ListView ItemsSource="{Binding MyCollectionItems}" Height="200" Background="{DynamicResource AccentColorBrush4}" />
-                            </Border>
+                            <Button DockPanel.Dock="Left" 
+                                x:Name="GetDataSourceList" 
+                                Content="Query Server"
+                                IsEnabled="{Binding Connected}" 
+                                HorizontalAlignment="Left" 
+                                Width="172" Height="41"
+                                Margin="10 "/>
+                            <UniformGrid Columns="2">
+                                <GroupBox Name="serverResponsePanelGrp" Header="Server Response" Background="{DynamicResource AccentColorBrush2}">
+                                    <StackPanel>
+                                        <ListView ItemsSource="{Binding ServerResponseItems}" Height="200" Background="{DynamicResource AccentColorBrush4}" Margin="5" />
+                                    </StackPanel>
+                                </GroupBox>
+                                <GroupBox Name="serverResponseDetailedPanelGrp" Header="Details" Background="{DynamicResource AccentColorBrush2}">
+                                    <StackPanel>
+                                        <ListView ItemsSource="{Binding MyCollectionItems}" Height="200" Background="{DynamicResource AccentColorBrush4}" Margin="5" />
+                                    </StackPanel>
+                                </GroupBox>                                
+
+                            </UniformGrid>
                         </StackPanel>
-                    </UniformGrid>
-                </StackPanel>
-            </GroupBox>
-        </Grid>
+                    </Expander>
+                </Grid>
+
+            </DockPanel>
+        </ScrollViewer>
 
     </DockPanel>
 
